feat: leaderboard api (get query), endless scroll replaced with pagination
