# packages/server/src/utils/types/user.ts
@@ -7,10 +7,26 @@ export interface User {
   second_name: string
   email: string
   phone: string
-  display_name: string
-  avatar: string
+  display_name: string | null
+  avatar: string | null
 }
 
-export interface UserWithRole extends User {
+export interface RoverUser {
+  id: number
   role: RolesEnum
+  best_score: number | null
+}
+
+export interface UserExtended extends User, RoverUser {}
+
+export interface LeaderboardUser {
+  id: number
+  display_name: string | null
+  avatar: string | null
+  best_score: number | null
+}
+
+export interface Leaderboard {
+  players: LeaderboardUser[]
+  total: number
 }
